Added HMTL elements

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 </head>
 <body>
 
+  <img src="./assets/images/avatar-jessica.jpeg">
+
   Jessica Randall
   London, United Kingdom
   "Front-end developer and avid reader."
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  <a src="https://github.com/">GitHub</a>
+  <a src="https://www.frontendmentor.io/">Frontend Mentor</a>
+  <a src="https://www.linkedin.com">LinkedIn</a>
+  <a src="https://www.twitter.com">Twitter</a>
+  <a src="https://www.twitter.com">Instagram</a>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">liamlizard</a>.
   </div>
 </body>
 </html>
