--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./styles.css">
   
   <title>Frontend Mentor | Social links profile</title>
 
@@ -15,22 +16,33 @@
   </style>
 </head>
 <body>
+  <main>
 
-  <img src="./assets/images/avatar-jessica.jpeg">
+    <img class="profile-pic" src="./assets/images/avatar-jessica.jpeg" alt="Profile Picture">
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+    <div class="name">
+      Jessica Randall
+    </div>
+    <div class="location">
+      London, United Kingdom
+    </div>
+    <div class="bio">
+      "Front-end developer and avid reader."
+    </div>
 
-  <a src="https://github.com/">GitHub</a>
-  <a src="https://www.frontendmentor.io/">Frontend Mentor</a>
-  <a src="https://www.linkedin.com">LinkedIn</a>
-  <a src="https://www.twitter.com">Twitter</a>
-  <a src="https://www.twitter.com">Instagram</a>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">liamlizard</a>.
-  </div>
+    <div class="social-links">
+      <a class="link" src="https://github.com/">GitHub</a>
+      <a class="link" src="https://www.frontendmentor.io/">Frontend Mentor</a>
+      <a class="link" src="https://www.linkedin.com">LinkedIn</a>
+      <a class="link" src="https://www.twitter.com">Twitter</a>
+      <a class="link" src="https://www.twitter.com">Instagram</a>
+    </div>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">liamlizard</a>.
+    </div>
+
+  </main>
 </body>
 </html>
